refactor stax and dom reader